--- a/config/train_config.json
+++ b/config/train_config.json
@@ -4,15 +4,21 @@
   "img_encoder_path": "/home/lkh/siga/ckpt/clip-vit-base-patch32",
   "projector_path": "/home/lkh/siga/ckpt/projector_weights.pth",
 
-  "parent_cn_path": "/home/lkh/siga/output/log",
-  "index": "0508_1848",
+  "file_path": "/home/lkh/siga/dataset/my_dataset/normals_train_dataset/train_dataset",
   
-  "test_img_path": "",
-  "test_sketch_path": "",
-  "img_index": [0, 4],
+  "parent_log_dir": "/home/lkh/siga/output/log",
+  "compare_log": "/home/lkh/siga/output/log/compare.log",
+  
+  "mode": "train",
+  "device": "cuda:0",
   "res": 256,
-  "output_dir": "/home/lkh/siga/CADIMG/infer",
-  "torch_dtype": "torch32",
-  "device": "cpu",
+  "num_epochs": 10,
+  "batch_size": 4,
+  "lam": 0.0,
+  "lr": 1e-5,
+  "torch_dtype": "float32",
+  "weight_decay": 1e-2,
+
+  "debug": 0,
   "tip": " "
 }
